fix: invert getWorkspaceResourcesIgnoringType predicate; exclude SKILL from MCP paths (B4)
The isEmpty() guard at ModelInferenceLogsUtils:2843 was inverted — the filter
only applied when the ignore list was empty, so callers passing List.of("PROMPT")
got all resource types back including PROMPT. The bug was silent until this PR
introduced SKILL as a third resource type, causing SKILL rows to leak into the
MCP resolution paths in Room and AgentConfigLoader.

Fix: change isEmpty() to !isEmpty() so the != filter applies when the caller
provides a non-empty ignore list. Also update both MCP call sites to exclude
SKILL_RESOURCE_TYPE alongside PROMPT_RESOURCE_TYPE, since skills are not MCPs
and would otherwise pass through the corrected filter.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>